# s3-rest

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.h  README.markdown
include/: aws_sign.h  common.h  response_parser.h  url_utility.h  utility.h  webclient.h
reference/: fstring.cpp  load_balancers  rest-client.cpp
reference/etc/: web-proxy.py
reference/pawsey/: parallel_ceph.sh  upload_minio10.sh  upload_minio4.sh  uploadfile10.sh  uploadfile4.sh
reference/test/: 00_list-bucket-info.sh  00_list-buckets.sh  00_list-object-info.sh  00_list-object-tags.sh  00_list-objects-in-bucket.sh  00_list-objects-with-version.sh  01_create-bucket.sh  02_delete-bucket.sh  03_put-object-into-bucket.sh  03_upload-file-into-object.sh  04_download-object-to-file.sh  04_range.txt  04_read-byte-range.sh  04_read-object-content.sh  05_delete-object.sh  06_copy-object.sh  07_add-object-with-metadata.sh  08_sample-tags-2.xml  08_sample-tags.xml  08_set-tags-on-object.sh  09_delete-versioned-object.sh  09_enable-bucket-versioning.sh  09_versioning-request-body.xml  10_append-to-object.sh  11_end-upload.sh  11_end-upload.xml  11_start-upload.sh  11_upload-part.sh  12_acl-public-read.sh  12_get-bucket-acl.sh  13_usage.sh  14_bucket-location.sh  15_retention.xml  15_set-object-retention.sh  16_legal-hold-status.xml  16_set-object-legal-hold.sh  17_create-notification-object-created.xml  17_create-notification.sh  17_create-notification.xml  17_create-topic.sh  (+6 more)
reference/test/19_root/level1/: file1.txt
reference/test/19_root/level1/level2/: file12.txt
src/: CMakeLists.txt  aws_sign.cpp  main.cpp  parallel_download.cpp  parallel_upload.cpp  presign_url.cpp  response_parser.cpp  s3-client.cpp  sign_header.cpp  url_utility.cpp  utility.cpp  webclient.cpp
